--- a/application-db.yml
+++ b/application-db.yml
@@ -4,7 +4,7 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/lyra?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
     username: root
     password: Aup6g/t;3
-    initialize: true
+    initialize: false
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
