--- a/application-eureka.yml
+++ b/application-eureka.yml
@@ -1,4 +1,4 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:18761/eureka/
+      defaultZone: http://lyra-manager:18761/eureka/
