--- a/application-db.yml
+++ b/application-db.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/lyra?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
+    url: jdbc:mysql://${LYRA_MYSQL_IP}:3306/lyra?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
     username: root
     password: Aup6g/t;3
     initialize: false
@@ -16,6 +16,6 @@ spring:
         tenant_identifier_resolver: com.lyra.common.tenant.CurrentTenantIdentifierResolverImpl
         multi_tenant_connection_provider: com.lyra.common.tenant.MultiTenantConnectionProviderImpl
   redis:
-    host: 127.0.0.1
+    host: ${LYRA_REDIS_IP}
     port: 6379
     password: Smtjh2020
