--- a/application-db.yml
+++ b/application-db.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://${LYRA_MYSQL_IP}:3306/lyra?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai&nullCatalogMeansCurrent=true
     username: root
-    password: Aup6g/t;3
+    password: ${MYSQL_ROOT_PASSWORD}
     initialize: false
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
